--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.12.0",
-    "hono": "^4.5.3"
+    "@types/pg": "^8.11.6",
+    "hono": "^4.5.3",
+    "pg": "^8.12.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
